# fastapi-sqllite-orm

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: N_PLUS_ONE.md
scripts/: cache_crud.sh  health_check.sh  install.sh  raw_sql_crud.sh  sql_crud.sh  start_backend.sh  status_backend.sh  stop_backend.sh
src/app/: auth.py  config.py  deps.py  exceptions.py  main.py
src/app/api/v1/: auth.py  cache_crud.py  health.py  hello.py  raw_sql_crud.py  sql_crud.py  sqlalchemy_crud.py  sqlmodel_crud.py
src/app/cache/: backend.py
src/app/db/: base.py  models.py  session.py  sql_loader.py
src/app/db/sqlalchemy/: __init__.py  models.py  session.py
src/app/db/sqlmodel/: __init__.py  models.py  session.py
src/app/middleware/: jwt_auth.py  logging_middleware.py  timing_middleware.py
src/app/models/: __init__.py  cache_crud.py  health.py  hello.py  raw_sql.py  sql_crud.py
src/app/sql/: items_delete.sql  items_insert.sql  items_select_all.sql  items_select_by_id.sql  items_update.sql
tests/: benchmark_nplus1.py  benchmark_orm_sa_vs_sm.py  conftest.py  test_auth.py  test_cache_crud.py  test_health.py  test_hello.py  test_nplus1.py  test_pydantic_question1.py  test_raw_sql_crud.py  test_sql_crud.py
tests/pydantic/: __init__.py  question1.py
